--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "5.46.0",
     "@typescript-eslint/parser": "5.46.0",
+    "@types/express": "4.17.17",
     "eslint": "8.39.0",
     "eslint-config-htmlacademy": "9.1.1",
     "json-server": "0.17.1",
@@ -41,10 +42,14 @@
   "dependencies": {
     "@typegoose/typegoose": "11.1.0",
     "chalk": "^5.3.0",
+    "class-transformer": "0.5.1",
     "convict": "6.2.4",
     "convict-format-with-validator": "6.2.0",
     "dayjs": "1.11.7",
     "dotenv": "16.0.3",
+    "express": "4.18.2",
+    "express-async-handler": "1.2.0",
+    "http-status-codes": "2.2.0",
     "inversify": "6.0.1",
     "got": "12.5.3",
     "mongoose": "7.1.1",
