--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@typescript-eslint/eslint-plugin": "5.46.0",
     "@typescript-eslint/parser": "5.46.0",
     "@types/express": "4.17.17",
+    "@types/multer": "1.4.7",
+    "@types/mime-types": "2.1.1",
     "eslint": "8.39.0",
     "eslint-config-htmlacademy": "9.1.1",
     "json-server": "0.17.1",
@@ -53,7 +55,10 @@
     "http-status-codes": "2.2.0",
     "inversify": "6.0.1",
     "got": "12.5.3",
+    "mime-types": "2.1.35",
     "mongoose": "7.1.1",
+    "multer": "1.4.5-lts.1",
+    "nanoid": "4.0.2",
     "pino": "8.7.0",
     "reflect-metadata": "0.1.13"
   }
