--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express": "4.17.17",
     "@types/multer": "1.4.7",
     "@types/mime-types": "2.1.1",
+    "@types/cors": "2.8.13",
     "eslint": "8.39.0",
     "eslint-config-htmlacademy": "9.1.1",
     "json-server": "0.17.1",
@@ -48,6 +49,7 @@
     "class-validator": "0.14.0",
     "convict": "6.2.4",
     "convict-format-with-validator": "6.2.0",
+    "cors": "2.8.5",
     "dayjs": "1.11.7",
     "dotenv": "16.0.3",
     "express": "4.18.2",
